--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clipm": "src/clipm.js"
   },
   "bin": {
-    "clipm": "bin/processmanager.js"
+    "clipm": "src/clipm.js"
   },
   "publishConfig": {
     "access": "public"
@@ -27,10 +28,12 @@
     "inquirer": "^6.3.1",
     "listr": "^0.14.3",
     "minimist": "^1.2.0",
+    "minimist-options": "^4.0.1",
     "ncp": "^2.0.0",
     "os": "^0.1.1",
     "os-utils": "0.0.14",
     "pkg-install": "^1.0.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "yargs": "^13.2.4"
   }
 }
